# mini-systems

./: .gitignore  Main.agda  Poly.agda  README.md  cabal.project.freeze  mini-systems.agda-lib  mini-systems.cabal
app/: Main.hs  Parse.hs  Types.hs
