cabal-version:      3.4
name:               mini-systems
version:            0.1.0.0
synopsis:           Experiments with formal and dynamical systems and automata
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Sasha
maintainer:         contact@sashaboyd.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable parse
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
                    , adjunctions
                    , free
    hs-source-dirs:   app
    default-language: GHC2021
